--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             min-height: 100vh;
             margin: 0;
             display: flex;
+            flex-direction: column; /* Alterado para coluna para acomodar o rodapé */
             align-items: center;
             justify-content: center;
             padding: 15px;
@@ -52,6 +53,24 @@
             position: relative;
             transition: height var(--anim-speed) var(--smooth);
             overflow: hidden;
+        }
+
+        /* Rodapé da App */
+        .app-footer {
+            margin-top: 25px;
+            font-size: 0.85rem;
+            color: var(--text-dark);
+            opacity: 0.5;
+            text-align: center;
+            font-weight: 600;
+            letter-spacing: 0.5px;
+            transition: opacity 0.3s;
+            cursor: default;
+            user-select: none;
+        }
+        
+        .app-footer:hover {
+            opacity: 0.9;
         }
 
         /* Header e Botão Ajuda */
@@ -399,6 +418,11 @@
         </svg>
         Partilhar app
     </button>
+</div>
+
+<!-- Rodapé Adicionado -->
+<div class="app-footer">
+    Desenvolvido por Ricardo
 </div>
 
 <div id="modalAjuda">
