--- a/index.html
+++ b/index.html
@@ -249,23 +249,44 @@
                         </div>
 
                         <div className="grid grid-cols-2 gap-4 items-end">
-                            <div>
-                                <label className="block text-sm font-bold uppercase mb-2 text-green-400 whitespace-nowrap overflow-hidden text-ellipsis">
-                                    Está a passar <span className="text-yellow-400">{tab === 'weight' ? '(€/Kg)' : '(€)'}</span>
-                                </label>
-                                <input type="number" inputMode="decimal" value={baseInput} onChange={e => setBaseInput(e.target.value)} className="w-full border rounded-xl p-3 text-center font-bold text-xl outline-none transition-colors bg-gray-900 border-gray-600 text-green-400 focus:border-green-500 placeholder-gray-700" placeholder="0.00" />
-                            </div>
-                            <div>
-                                <label className="block text-sm font-bold uppercase mb-2 text-green-400 whitespace-nowrap overflow-hidden text-ellipsis">
-                                    Desconto Direto <span className="text-yellow-400">(€)</span>
-                                </label>
-                                <input type="number" inputMode="decimal" value={discInput} onChange={e => setDiscInput(e.target.value)} className="w-full border rounded-xl p-3 text-center font-bold text-xl outline-none transition-colors bg-gray-900 border-gray-600 text-green-400 focus:border-green-500 placeholder-gray-700" placeholder="0.00" />
-                            </div>
-                        </div>
+    <div>
+        <label className="block text-sm font-bold uppercase mb-2 text-green-400 leading-tight">
+            Está a passar <span className="text-yellow-400">{tab === 'weight' ? '(€/Kg)' : '(€)'}</span>
+        </label>
+        <input 
+            type="text" 
+            inputMode="decimal" 
+            value={baseInput} 
+            onChange={e => setBaseInput(e.target.value.replace(',', '.'))} 
+            className="w-full border rounded-xl p-3 text-center font-bold text-lg outline-none transition-colors bg-gray-900 border-gray-600 text-green-400 focus:border-green-500 placeholder-gray-700" 
+            placeholder="0.00" 
+        />
+    </div>
+    <div>
+        <label className="block text-sm font-bold uppercase mb-2 text-green-400 leading-tight">
+            Desconto Direto <span className="text-yellow-400">(€)</span>
+        </label>
+        <input 
+            type="text" 
+            inputMode="decimal" 
+            value={discInput} 
+            onChange={e => setDiscInput(e.target.value.replace(',', '.'))} 
+            className="w-full border rounded-xl p-3 text-center font-bold text-lg outline-none transition-colors bg-gray-900 border-gray-600 text-green-400 focus:border-green-500 placeholder-gray-700" 
+            placeholder="0.00" 
+        />
+    </div>
+</div>
 
                         <div className="mt-6 pt-4 border-t border-gray-700/50">
                             <label className="block text-sm font-bold uppercase mb-2 text-center tracking-wider text-green-400">Quero que passe a <span className="text-yellow-400">{tab === 'weight' ? '(€/Kg)' : '(€)'}</span></label>
-                            <input type="number" inputMode="decimal" value={targetInput} onChange={e => setTargetInput(e.target.value)} className="w-full border-2 rounded-2xl p-4 text-center font-bold text-3xl outline-none transition-all shadow-lg shadow-black/20 bg-gray-900 border-green-500/50 text-green-400 focus:border-green-400 focus:bg-gray-800 placeholder-gray-700" placeholder="0.00" />
+                            <input 
+    type="text" 
+    inputMode="decimal" 
+    value={targetInput} 
+    onChange={e => setTargetInput(e.target.value.replace(',', '.'))} 
+    className="w-full border-2 rounded-2xl p-4 text-center font-bold text-3xl outline-none transition-all shadow-lg shadow-black/20 bg-gray-900 border-green-500/50 text-green-400 focus:border-green-400 focus:bg-gray-800 placeholder-gray-700" 
+    placeholder="0.00" 
+/>
                         </div>
                     </div>
 
